# recon

./: .gitignore  README.md  main.py  postprocess.py  pyproject.toml  reconstructed_volume.mhd  reconstruction.py  test.drawio
CT_parallel_beam/: main.py  postprocess.py  reconstruction.py
beams/cone_beam/: main.py  postprocess.py  vis.py
beams/parallel_beam/: main.py  postprocess.py  reconstruction.py
docs/: DESIGN.md  LEAP.md
parallel_beam/: main.py  postprocess.py  sinogram.npy
recon/: main.py
recon/controllers/: __init__.py  menu_controller.py  objects_controller.py
recon/controllers/objects/: __init__.py  actor_controller.py  objects_controller.py  source_controller.py  volume_controller.py
recon/models/: simulation.py
recon/utils/: __init__.py  observer.py
recon/views/: __init__.py  menu.py  parameters.py  run.py  view.py
recon/views/objects/: __init__.py  actor_manager.py  objects.py  objects_list.py  source_manager.py  volume_manager.py
src/: home_tab.py  main.py  main_window.py  reconstruction_tab.py  simulation_tab.py  visualization_tab.py
src/controllers/: __init__.py  simulation_controller.py
src/models/: __init__.py  simulation.py
src/views/: __init__.py  creator_view.py  editor_view.py  factory.py  menu_view.py  view.py
